# vibe-trail

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  Package.resolved  Package.swift  README.md  TECH_SPEC.md
.claude/agents/: core-dev.md  (+4 more)
apps/vibetrail-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/vibetrail-app/src-tauri/capabilities/: default.json
apps/vibetrail-app/src-tauri/icons/: icon.icns
apps/vibetrail-app/src-tauri/src/: config.rs  main.rs  resumer.rs
crates/vibetrail-cli/: Cargo.toml
crates/vibetrail-cli/src/: commands.rs  format.rs  main.rs
crates/vibetrail-core/: Cargo.toml
crates/vibetrail-core/src/: config.rs  error.rs  handoff.rs  lib.rs  model.rs  provider.rs  resume.rs  search.rs  store.rs  textutil.rs
crates/vibetrail-core/src/providers/: mod.rs
crates/vibetrail-core/src/providers/antigravity/: mod.rs
crates/vibetrail-core/src/providers/claude_code/: entry.rs  mod.rs  pipeline.rs
crates/vibetrail-core/src/providers/codex/: mod.rs  pipeline.rs
crates/vibetrail-core/src/providers/cursor/: mod.rs
crates/vibetrail-core/src/providers/qoder/: mod.rs
crates/vibetrail-core/tests/: antigravity.rs  claude_code.rs  codex.rs  cursor.rs  json_schema.rs  qoder.rs
crates/vibetrail-core/tests/fixtures/agents/: reviewer.md
crates/vibetrail-core/tests/fixtures/agy-brain/cccccccc-1111-2222-3333-444444444444/: implementation_plan.md  task.md  task.md.metadata.json
crates/vibetrail-core/tests/fixtures/agy-brain/cccccccc-1111-2222-3333-444444444444/.system_generated/logs/: transcript.jsonl
crates/vibetrail-core/tests/fixtures/claude-projects/-Users-tester-demo-app/: 11111111-1111-1111-1111-111111111111.jsonl  22222222-2222-2222-2222-222222222222.jsonl  33333333-3333-3333-3333-333333333333.jsonl  44444444-4444-4444-4444-444444444444.jsonl
crates/vibetrail-core/tests/fixtures/claude-projects/-Users-tester-demo-app/11111111-1111-1111-1111-111111111111/subagents/: agent-abc123.jsonl  agent-abc123.meta.json
crates/vibetrail-core/tests/fixtures/claude-projects/-Users-tester-demo-app/memory/: MEMORY.md  login-flow.md  user-short-commits.md
crates/vibetrail-core/tests/fixtures/codex-sessions/2026/06/10/: rollout-2026-06-10T12-00-00-aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.jsonl
crates/vibetrail-core/tests/fixtures/codex-sessions/2026/06/12/: rollout-2026-06-12T10-00-00-dddddddd-1111-2222-3333-444444444444.jsonl  rollout-2026-06-12T10-05-00-eeeeeeee-1111-2222-3333-444444444444.jsonl
crates/vibetrail-core/tests/fixtures/cursor-user/: global-kv.json  workspace-composers.json
crates/vibetrail-core/tests/fixtures/qoder-projects/-Users-tester-demo-app/: dddd4444-0000-4000-8000-000000000004-session.json  dddd4444-0000-4000-8000-000000000004.jsonl  eeee5555-0000-4000-8000-000000000005-session.json  eeee5555-0000-4000-8000-000000000005.jsonl  toolu_vrtx_01FakeSubagentTask.jsonl
crates/vibetrail-core/tests/fixtures/qoder-projects/-Users-tester-demo-app/dddd4444-0000-4000-8000-000000000004/: checkpoint-v1.json
crates/vibetrail-core/tests/fixtures/teams/session-demo/: config.json
(+27 files in other folders)
