[workspace]
resolver = "2"
members = [
    "crates/vibetrail-core",
    "crates/vibetrail-cli",
    "apps/vibetrail-app/src-tauri",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mahui/vibe-trail"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
