[package]
name = "vibetrail-cli"
description = "Session browser & resume for coding agents — CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vibetrail"
path = "src/main.rs"

[dependencies]
vibetrail-core = { path = "../vibetrail-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "6"
