[package]
name = "vibetrail-app"
description = "Session browser & resume for coding agents — Tauri app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vibetrail-core = { path = "../../../crates/vibetrail-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
